Correccion en las rutas relativas de etiquetas link y script

--- a/servicios.html
+++ b/servicios.html
@@ -21,8 +21,8 @@
     <script defer src="./components/footer.js"></script>
     <link rel="stylesheet" href="./components/footer.css" />
 
-    <link rel="stylesheet" href="../pages/servicios.css" />
-    <script defer src="../pages/servicios.js"></script>
+    <link rel="stylesheet" href="./pages/servicios.css" />
+    <script defer src="./pages/servicios.js"></script>
   </head>
   <body>
     <section class="bienvenida-section">
