--- a/contacto.html
+++ b/contacto.html
@@ -21,8 +21,8 @@
     <script defer src="./components/footer.js"></script>
     <link rel="stylesheet" href="./components/footer.css" />
 
-    <link rel="stylesheet" href="../pages/contacto.css" />
-    <script defer src="../pages/contacto.js"></script>
+    <link rel="stylesheet" href="./pages/contacto.css" />
+    <script defer src="./pages/contacto.js"></script>
   </head>
   <body>
     <section class="header-section">
