--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
     <script defer src="./components/footer.js"></script>
     <link rel="stylesheet" href="./components/footer.css" />
 
-    <link rel="stylesheet" href="../pages/portfolio.css" />
-    <script defer src="../pages/portfolio.js"></script>
+    <link rel="stylesheet" href="./pages/portfolio.css" />
+    <script defer src="./pages/portfolio.js"></script>
   </head>
   <body>
     <section class="bienvenida-section">
